# exec-json

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.py
exec_json/: __init__.py  __main__.py  core.py  utils.py
plans/: exec-json-plan.md
tests/: test_core.py  test_mcp_server.py
