[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "exec-json"
version = "1.0.0"
description = "Run any command with retry, timeout, and JSON extraction for AI agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "exec-json contributors"},
]
keywords = ["cli", "json", "extraction", "retry", "timeout", "ai-agent", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
exec-json = "exec_json.__main__:main"
exec-json-mcp = "server:main"

[tool.setuptools]
packages = ["exec_json"]
py-modules = ["server"]
